<resources>
    <string name="app_name">LifeQuest</string>
    <string name="action_settings">Settings</string>
    <string name="firebase_url">https://rpgoflife.firebaseio.com</string>

    <!-- ActionBarTitles -->
    <string name="change_password_title">Change Password</string>
    <string name="quest_history_title">Quest History</string>

    <!-- Options menu -->
    <string name="action_logout">Log out</string>

    <!-- Example strings for templates -->
    <string name="level_ex">Level</string>
    <string name="level_1">1</string>
    <string name="xp_ex">XP:</string>
    <string name="xp_500">500/1000</string>
    <string name="gold_ex">Gold:</string>
    <string name="gold_200">200</string>

    <!-- AddQuestActivity -->
    <string name="activity_add_quest_label">New Quest</string>
    <string name="new_quest">New Quest</string>
    <string name="description">Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="reward_text">Reward</string>
    <string name="submit_button">Done</string>
    <string name="date_button">Select Date</string>

    <!-- AddRewardActivity -->
    <string name="activity_add_reward_label">New Reward</string>
    <string name="new_reward">New Reward</string>
    <string name="cost">Cost</string>

    <!-- QuestDetailsActivity -->
    <string name="activity_quest_details_label">Quest Details</string>
    <string name="quest">Quest</string>
    <string name="reward">Reward</string>
    <string name="complete">Complete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fail">Fail</string>
    <string name="due_date">Due Date</string>
    <string name="done_button">Done</string>

    <!-- RewardDetailsActivity -->
    <string name="activity_reward_details_label">Reward Details</string>
    <string name="purchase">Purchase</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password</string>

    <array name="drawer_items">
        <item name="home">Home</item>
        <item name="past_quests">Quest History</item>
        <item name="change_password">Change Password</item>
    </array>

    <!-- ConfirmationDialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Batch -->
    <string name="batch_dev_key">DEV573B6ECD37CD9C407944AFB2022</string>
    <string name="batch_live_key">573B6ECD3624BA35D93065D0B413EC</string>
    <string name="batch_sender_id">1055219132394</string>

    <!-- PastQuestDetails -->
    <string name="restore">Restore</string>

    <!-- PlayerDeathDialog -->
    <string name="death_dialog_title">Game Over</string>
    <string name="death_dialog_message">You died! You are back to level 1.</string>
    <string name="ok_button">OK</string>

    <!-- Drawer -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- ChangePasswordFragment -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_button">Change Password</string>

    <!-- ForgotPasswordActivity -->
    <string name="recover_button">Reset Password</string>

    <!-- Showcase (Tutorial) Strings -->
    <string name="showcase_title_level">Level</string>
    <string name="showcase_text_level">This is your level. Increase it by completing quests to earn more xp and increase your max health.
        The more difficult, the more xp!</string>
    <string name="showcase_title_hp">Health</string>
    <string name="showcase_text_hp">This is your health. You lose health by failing quests. More so for easy quests than hard ones.
        You regenerate 1 health per day. If you die, your level will reset to 1.</string>
    <string name="showcase_title_gold">Gold</string>
    <string name="showcase_text_gold">This is your gold. Earn gold by completing quests. Spend it on rewards!</string>
    <string name="showcase_title_add">Add Quests/Rewards</string>
    <string name="showcase_text_add">Use this to add new quests and rewards. Quests can be anything you wish to
    accomplish in life, and rewards can be anything you want. Complete quests to earn gold to purchase rewards!</string>
    <string name="showcase_title_drawer">Drawer</string>
    <string name="showcase_text_drawer">Access the drawer to review your quest history, restore mistakenly completed/failed quests, and change your password.</string>
</resources>
