<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.levipayne.liferpg.ChangePasswordFragment"
    android:paddingTop="10dp"
    android:background="@color/main_background">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/current_password"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:hint="@string/current_password"
        style="@style/EditTextStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/new_password"
        android:layout_margin="10dp"
        android:hint="@string/new_password"
        style="@style/EditTextStyle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_button"
        android:id="@+id/change_button"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#FFFFFF" />
</LinearLayout>
